--- a/kotlin/Menu/Menu.storyboard
+++ b/kotlin/Menu/Menu.storyboard
@@ -48,7 +48,7 @@
                                             <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="rWP-2v-MZ9" kind="show" id="jus-IX-hxf"/>
+                                            <action selector="testButtonTapped:" destination="4np-la-VaC" eventType="touchUpInside" id="oZK-xT-eh3"/>
                                         </connections>
                                     </button>
                                     <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" text="New stock take" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jW4-4C-Joi">
